[gd_scene load_steps=3 format=3 uid="uid://b1l66y5wx0dgs"]

[ext_resource type="Theme" uid="uid://cr8rteqxcjyne" path="res://styles/menu.tres" id="1_0nmw1"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_8uywu"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_8uywu")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="Label" type="Label" parent="VBoxContainer2/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Best Game Ever Made"
horizontal_alignment = 1
vertical_alignment = 2
clip_text = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="play" type="Button" parent="VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_0nmw1")
text = "Play"

[node name="settings" type="Button" parent="VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_0nmw1")
text = "Settings"

[node name="credits" type="Button" parent="VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_0nmw1")
text = "Credits"

[node name="exit" type="Button" parent="VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_0nmw1")
text = "Exit"

[connection signal="button_up" from="VBoxContainer2/MarginContainer/VBoxContainer/play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="VBoxContainer2/MarginContainer/VBoxContainer/settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="VBoxContainer2/MarginContainer/VBoxContainer/credits" to="." method="_on_credits_button_up"]
[connection signal="button_up" from="VBoxContainer2/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_button_up"]
